model/compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND_SYM
    ARRAY
    DIRECTIVE
    FALSE
    FOR
    LABEL
    MATRIX
    OR_SYM
    RESERV
    RETURN
    SEMI
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> stmts
Rule 2     stmts -> stmt stmts
Rule 3     stmts -> <empty>
Rule 4     stmt -> NAME EQUALS MEMREF
Rule 5     stmt -> MEMREF EQUALS NAME
Rule 6     stmt -> NAME EQUALS NUMBER
Rule 7     stmt -> NAME EQUALS NAME
Rule 8     stmt -> NAME EQUALS expr
Rule 9     stmt -> NAME ASSIGN_OP expr
Rule 10    stmt -> REGISTER EQUALS expr
Rule 11    stmt -> REGISTER ASSIGN_OP expr
Rule 12    expr -> expr PLUS expr
Rule 13    expr -> expr MINUS expr
Rule 14    expr -> expr TIMES expr
Rule 15    expr -> MINUS expr
Rule 16    expr -> LPAREN expr RPAREN
Rule 17    expr -> NUMBER
Rule 18    expr -> NAME
Rule 19    expr -> MEMREF
Rule 20    expr -> NAME LBRACKET NUMBER RBRACKET
Rule 21    expr -> NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET
Rule 22    expr -> NAME LBRACKET expr RBRACKET
Rule 23    expr -> NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET
Rule 24    stmt -> NAME LBRACKET NUMBER RBRACKET EQUALS expr
Rule 25    stmt -> NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET EQUALS expr
Rule 26    stmt -> NAME LBRACKET expr RBRACKET EQUALS expr
Rule 27    stmt -> NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET EQUALS expr
Rule 28    stmt -> NAME LBRACKET expr RBRACKET ASSIGN_OP expr
Rule 29    stmt -> NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET ASSIGN_OP expr
Rule 30    stmt -> NAME LBRACKET NUMBER RBRACKET ASSIGN_OP expr
Rule 31    stmt -> NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET ASSIGN_OP expr
Rule 32    stmt -> TYPE NAME LBRACE fields RBRACE
Rule 33    fields -> NAME
Rule 34    fields -> NAME COMMA fields
Rule 35    stmt -> VAR NAME COLON NAME
Rule 36    stmt -> NAME DOT NAME EQUALS expr
Rule 37    stmt -> NAME DOT NAME ASSIGN_OP expr
Rule 38    expr -> NAME DOT NAME
Rule 39    stmt -> WHILE NAME NE NAME COLON BEGIN stmts END
Rule 40    stmt -> WHILE NAME NE NUMBER COLON BEGIN stmts END
Rule 41    stmt -> PRINT LPAREN print_args RPAREN
Rule 42    print_args -> print_arg
Rule 43    print_args -> print_arg COMMA print_args
Rule 44    print_arg -> STRING
Rule 45    print_arg -> expr
Rule 46    expr -> INPUT LPAREN RPAREN
Rule 47    stmt -> WHILE NAME LT NAME COLON BEGIN stmts END
Rule 48    stmt -> WHILE NAME LT NUMBER COLON BEGIN stmts END
Rule 49    cond -> cond AND cond
Rule 50    cond -> cond OR cond
Rule 51    cond -> NOT cond
Rule 52    cond -> NAME EQEQ NAME
Rule 53    cond -> NAME NE NAME
Rule 54    cond -> NAME LT NAME
Rule 55    cond -> NAME LE NAME
Rule 56    cond -> NAME GT NAME
Rule 57    cond -> NAME GE NAME
Rule 58    cond -> NAME EQEQ NUMBER
Rule 59    cond -> NAME NE NUMBER
Rule 60    cond -> NAME LT NUMBER
Rule 61    cond -> NAME LE NUMBER
Rule 62    cond -> NAME GT NUMBER
Rule 63    cond -> NAME GE NUMBER
Rule 64    stmt -> IF cond COLON BEGIN stmts END
Rule 65    stmt -> WHILE cond COLON BEGIN stmts END
Rule 66    stmt -> WHILE NAME GT NAME COLON BEGIN stmts END
Rule 67    stmt -> WHILE NAME GT NUMBER COLON BEGIN stmts END
Rule 68    stmt -> VAR NAME
Rule 69    stmt -> VAR NAME LBRACKET NUMBER RBRACKET
Rule 70    stmt -> VAR NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET
Rule 71    stmt -> PROC NAME LPAREN params RPAREN COLON BEGIN stmts END
Rule 72    params -> <empty>
Rule 73    params -> NAME
Rule 74    params -> NAME COMMA params
Rule 75    stmt -> CALL NAME LPAREN args RPAREN
Rule 76    args -> <empty>
Rule 77    args -> expr
Rule 78    args -> expr COMMA args
Rule 79    stmt -> IF NAME GT NAME COLON BEGIN stmts END
Rule 80    stmt -> IF NAME EQEQ NAME COLON BEGIN stmts END
Rule 81    stmt -> IF NAME LT NAME COLON BEGIN stmts END
Rule 82    stmt -> IF NAME EQEQ NUMBER COLON BEGIN stmts END
Rule 83    stmt -> IF NAME GT NAME COLON BEGIN stmts END ELSE COLON BEGIN stmts END
Rule 84    stmt -> NAME asm_args
Rule 85    asm_args -> <empty>
Rule 86    asm_args -> asm_arg asm_args
Rule 87    asm_arg -> REGISTER
Rule 88    asm_arg -> NUMBER
Rule 89    asm_arg -> MEMREF
Rule 90    asm_arg -> NAME
Rule 91    asm_arg -> COMMA

Terminals, with rules where they appear

AND                  : 49
AND_SYM              : 
ARRAY                : 
ASSIGN_OP            : 9 11 28 29 30 31 37
BEGIN                : 39 40 47 48 64 65 66 67 71 79 80 81 82 83 83
CALL                 : 75
COLON                : 35 39 40 47 48 64 65 66 67 71 79 80 81 82 83 83
COMMA                : 34 43 74 78 91
DIRECTIVE            : 
DOT                  : 36 37 38
ELSE                 : 83
END                  : 39 40 47 48 64 65 66 67 71 79 80 81 82 83 83
EQEQ                 : 52 58 80 82
EQUALS               : 4 5 6 7 8 10 24 25 26 27 36
FALSE                : 
FOR                  : 
GE                   : 57 63
GT                   : 56 62 66 67 79 83
IF                   : 64 79 80 81 82 83
INPUT                : 46
LABEL                : 
LBRACE               : 32
LBRACKET             : 20 21 21 22 23 23 24 25 25 26 27 27 28 29 29 30 31 31 69 70 70
LE                   : 55 61
LPAREN               : 16 41 46 71 75
LT                   : 47 48 54 60 81
MATRIX               : 
MEMREF               : 4 5 19 89
MINUS                : 13 15
NAME                 : 4 5 6 7 7 8 9 18 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 35 36 36 37 37 38 38 39 39 40 47 47 48 52 52 53 53 54 54 55 55 56 56 57 57 58 59 60 61 62 63 66 66 67 68 69 70 71 73 74 75 79 79 80 80 81 81 82 83 83 84 90
NE                   : 39 40 53 59
NOT                  : 51
NUMBER               : 6 17 20 21 21 24 25 25 30 31 31 40 48 58 59 60 61 62 63 67 69 70 70 82 88
OR                   : 50
OR_SYM               : 
PLUS                 : 12
PRINT                : 41
PROC                 : 71
RBRACE               : 32
RBRACKET             : 20 21 21 22 23 23 24 25 25 26 27 27 28 29 29 30 31 31 69 70 70
REGISTER             : 10 11 87
RESERV               : 
RETURN               : 
RPAREN               : 16 41 46 71 75
SEMI                 : 
STRING               : 44
TIMES                : 14
TRUE                 : 
TYPE                 : 32
VAR                  : 35 68 69 70
WHILE                : 39 40 47 48 65 66 67
error                : 

Nonterminals, with rules where they appear

args                 : 75 78
asm_arg              : 86
asm_args             : 84 86
cond                 : 49 49 50 50 51 64 65
expr                 : 8 9 10 11 12 12 13 13 14 14 15 16 22 23 23 24 25 26 26 27 27 27 28 28 29 29 29 30 31 36 37 45 77 78
fields               : 32 34
params               : 71 74
print_arg            : 42 43
print_args           : 41 43
program              : 0
stmt                 : 2
stmts                : 1 2 39 40 47 48 64 65 66 67 71 79 80 81 82 83 83

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmts
    (2) stmts -> . stmt stmts
    (3) stmts -> .
    (4) stmt -> . NAME EQUALS MEMREF
    (5) stmt -> . MEMREF EQUALS NAME
    (6) stmt -> . NAME EQUALS NUMBER
    (7) stmt -> . NAME EQUALS NAME
    (8) stmt -> . NAME EQUALS expr
    (9) stmt -> . NAME ASSIGN_OP expr
    (10) stmt -> . REGISTER EQUALS expr
    (11) stmt -> . REGISTER ASSIGN_OP expr
    (24) stmt -> . NAME LBRACKET NUMBER RBRACKET EQUALS expr
    (25) stmt -> . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET EQUALS expr
    (26) stmt -> . NAME LBRACKET expr RBRACKET EQUALS expr
    (27) stmt -> . NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET EQUALS expr
    (28) stmt -> . NAME LBRACKET expr RBRACKET ASSIGN_OP expr
    (29) stmt -> . NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET ASSIGN_OP expr
    (30) stmt -> . NAME LBRACKET NUMBER RBRACKET ASSIGN_OP expr
    (31) stmt -> . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET ASSIGN_OP expr
    (32) stmt -> . TYPE NAME LBRACE fields RBRACE
    (35) stmt -> . VAR NAME COLON NAME
    (36) stmt -> . NAME DOT NAME EQUALS expr
    (37) stmt -> . NAME DOT NAME ASSIGN_OP expr
    (39) stmt -> . WHILE NAME NE NAME COLON BEGIN stmts END
    (40) stmt -> . WHILE NAME NE NUMBER COLON BEGIN stmts END
    (41) stmt -> . PRINT LPAREN print_args RPAREN
    (47) stmt -> . WHILE NAME LT NAME COLON BEGIN stmts END
    (48) stmt -> . WHILE NAME LT NUMBER COLON BEGIN stmts END
    (64) stmt -> . IF cond COLON BEGIN stmts END
    (65) stmt -> . WHILE cond COLON BEGIN stmts END
    (66) stmt -> . WHILE NAME GT NAME COLON BEGIN stmts END
    (67) stmt -> . WHILE NAME GT NUMBER COLON BEGIN stmts END
    (68) stmt -> . VAR NAME
    (69) stmt -> . VAR NAME LBRACKET NUMBER RBRACKET
    (70) stmt -> . VAR NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET
    (71) stmt -> . PROC NAME LPAREN params RPAREN COLON BEGIN stmts END
    (75) stmt -> . CALL NAME LPAREN args RPAREN
    (79) stmt -> . IF NAME GT NAME COLON BEGIN stmts END
    (80) stmt -> . IF NAME EQEQ NAME COLON BEGIN stmts END
    (81) stmt -> . IF NAME LT NAME COLON BEGIN stmts END
    (82) stmt -> . IF NAME EQEQ NUMBER COLON BEGIN stmts END
    (83) stmt -> . IF NAME GT NAME COLON BEGIN stmts END ELSE COLON BEGIN stmts END
    (84) stmt -> . NAME asm_args

    $end            reduce using rule 3 (stmts -> .)
    NAME            shift and go to state 4
    MEMREF          shift and go to state 5
    REGISTER        shift and go to state 6
    TYPE            shift and go to state 7
    VAR             shift and go to state 8
    WHILE           shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    PROC            shift and go to state 12
    CALL            shift and go to state 13

    program                        shift and go to state 1
    stmts                          shift and go to state 2
    stmt                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> stmts .

    $end            reduce using rule 1 (program -> stmts .)


state 3

    (2) stmts -> stmt . stmts
    (2) stmts -> . stmt stmts
    (3) stmts -> .
    (4) stmt -> . NAME EQUALS MEMREF
    (5) stmt -> . MEMREF EQUALS NAME
    (6) stmt -> . NAME EQUALS NUMBER
    (7) stmt -> . NAME EQUALS NAME
    (8) stmt -> . NAME EQUALS expr
    (9) stmt -> . NAME ASSIGN_OP expr
    (10) stmt -> . REGISTER EQUALS expr
    (11) stmt -> . REGISTER ASSIGN_OP expr
    (24) stmt -> . NAME LBRACKET NUMBER RBRACKET EQUALS expr
    (25) stmt -> . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET EQUALS expr
    (26) stmt -> . NAME LBRACKET expr RBRACKET EQUALS expr
    (27) stmt -> . NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET EQUALS expr
    (28) stmt -> . NAME LBRACKET expr RBRACKET ASSIGN_OP expr
    (29) stmt -> . NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET ASSIGN_OP expr
    (30) stmt -> . NAME LBRACKET NUMBER RBRACKET ASSIGN_OP expr
    (31) stmt -> . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET ASSIGN_OP expr
    (32) stmt -> . TYPE NAME LBRACE fields RBRACE
    (35) stmt -> . VAR NAME COLON NAME
    (36) stmt -> . NAME DOT NAME EQUALS expr
    (37) stmt -> . NAME DOT NAME ASSIGN_OP expr
    (39) stmt -> . WHILE NAME NE NAME COLON BEGIN stmts END
    (40) stmt -> . WHILE NAME NE NUMBER COLON BEGIN stmts END
    (41) stmt -> . PRINT LPAREN print_args RPAREN
    (47) stmt -> . WHILE NAME LT NAME COLON BEGIN stmts END
    (48) stmt -> . WHILE NAME LT NUMBER COLON BEGIN stmts END
    (64) stmt -> . IF cond COLON BEGIN stmts END
    (65) stmt -> . WHILE cond COLON BEGIN stmts END
    (66) stmt -> . WHILE NAME GT NAME COLON BEGIN stmts END
    (67) stmt -> . WHILE NAME GT NUMBER COLON BEGIN stmts END
    (68) stmt -> . VAR NAME
    (69) stmt -> . VAR NAME LBRACKET NUMBER RBRACKET
    (70) stmt -> . VAR NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET
    (71) stmt -> . PROC NAME LPAREN params RPAREN COLON BEGIN stmts END
    (75) stmt -> . CALL NAME LPAREN args RPAREN
    (79) stmt -> . IF NAME GT NAME COLON BEGIN stmts END
    (80) stmt -> . IF NAME EQEQ NAME COLON BEGIN stmts END
    (81) stmt -> . IF NAME LT NAME COLON BEGIN stmts END
    (82) stmt -> . IF NAME EQEQ NUMBER COLON BEGIN stmts END
    (83) stmt -> . IF NAME GT NAME COLON BEGIN stmts END ELSE COLON BEGIN stmts END
    (84) stmt -> . NAME asm_args

    $end            reduce using rule 3 (stmts -> .)
    END             reduce using rule 3 (stmts -> .)
    NAME            shift and go to state 4
    MEMREF          shift and go to state 5
    REGISTER        shift and go to state 6
    TYPE            shift and go to state 7
    VAR             shift and go to state 8
    WHILE           shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    PROC            shift and go to state 12
    CALL            shift and go to state 13

    stmt                           shift and go to state 3
    stmts                          shift and go to state 14

state 4

    (4) stmt -> NAME . EQUALS MEMREF
    (6) stmt -> NAME . EQUALS NUMBER
    (7) stmt -> NAME . EQUALS NAME
    (8) stmt -> NAME . EQUALS expr
    (9) stmt -> NAME . ASSIGN_OP expr
    (24) stmt -> NAME . LBRACKET NUMBER RBRACKET EQUALS expr
    (25) stmt -> NAME . LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET EQUALS expr
    (26) stmt -> NAME . LBRACKET expr RBRACKET EQUALS expr
    (27) stmt -> NAME . LBRACKET expr RBRACKET LBRACKET expr RBRACKET EQUALS expr
    (28) stmt -> NAME . LBRACKET expr RBRACKET ASSIGN_OP expr
    (29) stmt -> NAME . LBRACKET expr RBRACKET LBRACKET expr RBRACKET ASSIGN_OP expr
    (30) stmt -> NAME . LBRACKET NUMBER RBRACKET ASSIGN_OP expr
    (31) stmt -> NAME . LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET ASSIGN_OP expr
    (36) stmt -> NAME . DOT NAME EQUALS expr
    (37) stmt -> NAME . DOT NAME ASSIGN_OP expr
    (84) stmt -> NAME . asm_args
    (85) asm_args -> .
    (86) asm_args -> . asm_arg asm_args
    (87) asm_arg -> . REGISTER
    (88) asm_arg -> . NUMBER
    (89) asm_arg -> . MEMREF
    (90) asm_arg -> . NAME
    (91) asm_arg -> . COMMA

  ! shift/reduce conflict for REGISTER resolved as shift
  ! shift/reduce conflict for MEMREF resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
    EQUALS          shift and go to state 16
    ASSIGN_OP       shift and go to state 19
    LBRACKET        shift and go to state 20
    DOT             shift and go to state 21
    TYPE            reduce using rule 85 (asm_args -> .)
    VAR             reduce using rule 85 (asm_args -> .)
    WHILE           reduce using rule 85 (asm_args -> .)
    PRINT           reduce using rule 85 (asm_args -> .)
    IF              reduce using rule 85 (asm_args -> .)
    PROC            reduce using rule 85 (asm_args -> .)
    CALL            reduce using rule 85 (asm_args -> .)
    $end            reduce using rule 85 (asm_args -> .)
    END             reduce using rule 85 (asm_args -> .)
    REGISTER        shift and go to state 24
    NUMBER          shift and go to state 18
    MEMREF          shift and go to state 17
    NAME            shift and go to state 15
    COMMA           shift and go to state 25

  ! NAME            [ reduce using rule 85 (asm_args -> .) ]
  ! MEMREF          [ reduce using rule 85 (asm_args -> .) ]
  ! REGISTER        [ reduce using rule 85 (asm_args -> .) ]

    asm_args                       shift and go to state 22
    asm_arg                        shift and go to state 23

state 5

    (5) stmt -> MEMREF . EQUALS NAME

    EQUALS          shift and go to state 26


state 6

    (10) stmt -> REGISTER . EQUALS expr
    (11) stmt -> REGISTER . ASSIGN_OP expr

    EQUALS          shift and go to state 27
    ASSIGN_OP       shift and go to state 28


state 7

    (32) stmt -> TYPE . NAME LBRACE fields RBRACE

    NAME            shift and go to state 29


state 8

    (35) stmt -> VAR . NAME COLON NAME
    (68) stmt -> VAR . NAME
    (69) stmt -> VAR . NAME LBRACKET NUMBER RBRACKET
    (70) stmt -> VAR . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET

    NAME            shift and go to state 30


state 9

    (39) stmt -> WHILE . NAME NE NAME COLON BEGIN stmts END
    (40) stmt -> WHILE . NAME NE NUMBER COLON BEGIN stmts END
    (47) stmt -> WHILE . NAME LT NAME COLON BEGIN stmts END
    (48) stmt -> WHILE . NAME LT NUMBER COLON BEGIN stmts END
    (65) stmt -> WHILE . cond COLON BEGIN stmts END
    (66) stmt -> WHILE . NAME GT NAME COLON BEGIN stmts END
    (67) stmt -> WHILE . NAME GT NUMBER COLON BEGIN stmts END
    (49) cond -> . cond AND cond
    (50) cond -> . cond OR cond
    (51) cond -> . NOT cond
    (52) cond -> . NAME EQEQ NAME
    (53) cond -> . NAME NE NAME
    (54) cond -> . NAME LT NAME
    (55) cond -> . NAME LE NAME
    (56) cond -> . NAME GT NAME
    (57) cond -> . NAME GE NAME
    (58) cond -> . NAME EQEQ NUMBER
    (59) cond -> . NAME NE NUMBER
    (60) cond -> . NAME LT NUMBER
    (61) cond -> . NAME LE NUMBER
    (62) cond -> . NAME GT NUMBER
    (63) cond -> . NAME GE NUMBER

    NAME            shift and go to state 31
    NOT             shift and go to state 33

    cond                           shift and go to state 32

state 10

    (41) stmt -> PRINT . LPAREN print_args RPAREN

    LPAREN          shift and go to state 34


state 11

    (64) stmt -> IF . cond COLON BEGIN stmts END
    (79) stmt -> IF . NAME GT NAME COLON BEGIN stmts END
    (80) stmt -> IF . NAME EQEQ NAME COLON BEGIN stmts END
    (81) stmt -> IF . NAME LT NAME COLON BEGIN stmts END
    (82) stmt -> IF . NAME EQEQ NUMBER COLON BEGIN stmts END
    (83) stmt -> IF . NAME GT NAME COLON BEGIN stmts END ELSE COLON BEGIN stmts END
    (49) cond -> . cond AND cond
    (50) cond -> . cond OR cond
    (51) cond -> . NOT cond
    (52) cond -> . NAME EQEQ NAME
    (53) cond -> . NAME NE NAME
    (54) cond -> . NAME LT NAME
    (55) cond -> . NAME LE NAME
    (56) cond -> . NAME GT NAME
    (57) cond -> . NAME GE NAME
    (58) cond -> . NAME EQEQ NUMBER
    (59) cond -> . NAME NE NUMBER
    (60) cond -> . NAME LT NUMBER
    (61) cond -> . NAME LE NUMBER
    (62) cond -> . NAME GT NUMBER
    (63) cond -> . NAME GE NUMBER

    NAME            shift and go to state 36
    NOT             shift and go to state 33

    cond                           shift and go to state 35

state 12

    (71) stmt -> PROC . NAME LPAREN params RPAREN COLON BEGIN stmts END

    NAME            shift and go to state 37


state 13

    (75) stmt -> CALL . NAME LPAREN args RPAREN

    NAME            shift and go to state 38


state 14

    (2) stmts -> stmt stmts .

    $end            reduce using rule 2 (stmts -> stmt stmts .)
    END             reduce using rule 2 (stmts -> stmt stmts .)


state 15

    (90) asm_arg -> NAME .

    REGISTER        reduce using rule 90 (asm_arg -> NAME .)
    NUMBER          reduce using rule 90 (asm_arg -> NAME .)
    MEMREF          reduce using rule 90 (asm_arg -> NAME .)
    NAME            reduce using rule 90 (asm_arg -> NAME .)
    COMMA           reduce using rule 90 (asm_arg -> NAME .)
    TYPE            reduce using rule 90 (asm_arg -> NAME .)
    VAR             reduce using rule 90 (asm_arg -> NAME .)
    WHILE           reduce using rule 90 (asm_arg -> NAME .)
    PRINT           reduce using rule 90 (asm_arg -> NAME .)
    IF              reduce using rule 90 (asm_arg -> NAME .)
    PROC            reduce using rule 90 (asm_arg -> NAME .)
    CALL            reduce using rule 90 (asm_arg -> NAME .)
    $end            reduce using rule 90 (asm_arg -> NAME .)
    END             reduce using rule 90 (asm_arg -> NAME .)


state 16

    (4) stmt -> NAME EQUALS . MEMREF
    (6) stmt -> NAME EQUALS . NUMBER
    (7) stmt -> NAME EQUALS . NAME
    (8) stmt -> NAME EQUALS . expr
    (12) expr -> . expr PLUS expr
    (13) expr -> . expr MINUS expr
    (14) expr -> . expr TIMES expr
    (15) expr -> . MINUS expr
    (16) expr -> . LPAREN expr RPAREN
    (17) expr -> . NUMBER
    (18) expr -> . NAME
    (19) expr -> . MEMREF
    (20) expr -> . NAME LBRACKET NUMBER RBRACKET
    (21) expr -> . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET
    (22) expr -> . NAME LBRACKET expr RBRACKET
    (23) expr -> . NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET
    (38) expr -> . NAME DOT NAME
    (46) expr -> . INPUT LPAREN RPAREN

    MEMREF          shift and go to state 40
    NUMBER          shift and go to state 41
    NAME            shift and go to state 39
    MINUS           shift and go to state 43
    LPAREN          shift and go to state 44
    INPUT           shift and go to state 45

    expr                           shift and go to state 42

state 17

    (89) asm_arg -> MEMREF .

    REGISTER        reduce using rule 89 (asm_arg -> MEMREF .)
    NUMBER          reduce using rule 89 (asm_arg -> MEMREF .)
    MEMREF          reduce using rule 89 (asm_arg -> MEMREF .)
    NAME            reduce using rule 89 (asm_arg -> MEMREF .)
    COMMA           reduce using rule 89 (asm_arg -> MEMREF .)
    TYPE            reduce using rule 89 (asm_arg -> MEMREF .)
    VAR             reduce using rule 89 (asm_arg -> MEMREF .)
    WHILE           reduce using rule 89 (asm_arg -> MEMREF .)
    PRINT           reduce using rule 89 (asm_arg -> MEMREF .)
    IF              reduce using rule 89 (asm_arg -> MEMREF .)
    PROC            reduce using rule 89 (asm_arg -> MEMREF .)
    CALL            reduce using rule 89 (asm_arg -> MEMREF .)
    $end            reduce using rule 89 (asm_arg -> MEMREF .)
    END             reduce using rule 89 (asm_arg -> MEMREF .)


state 18

    (88) asm_arg -> NUMBER .

    REGISTER        reduce using rule 88 (asm_arg -> NUMBER .)
    NUMBER          reduce using rule 88 (asm_arg -> NUMBER .)
    MEMREF          reduce using rule 88 (asm_arg -> NUMBER .)
    NAME            reduce using rule 88 (asm_arg -> NUMBER .)
    COMMA           reduce using rule 88 (asm_arg -> NUMBER .)
    TYPE            reduce using rule 88 (asm_arg -> NUMBER .)
    VAR             reduce using rule 88 (asm_arg -> NUMBER .)
    WHILE           reduce using rule 88 (asm_arg -> NUMBER .)
    PRINT           reduce using rule 88 (asm_arg -> NUMBER .)
    IF              reduce using rule 88 (asm_arg -> NUMBER .)
    PROC            reduce using rule 88 (asm_arg -> NUMBER .)
    CALL            reduce using rule 88 (asm_arg -> NUMBER .)
    $end            reduce using rule 88 (asm_arg -> NUMBER .)
    END             reduce using rule 88 (asm_arg -> NUMBER .)


state 19

    (9) stmt -> NAME ASSIGN_OP . expr
    (12) expr -> . expr PLUS expr
    (13) expr -> . expr MINUS expr
    (14) expr -> . expr TIMES expr
    (15) expr -> . MINUS expr
    (16) expr -> . LPAREN expr RPAREN
    (17) expr -> . NUMBER
    (18) expr -> . NAME
    (19) expr -> . MEMREF
    (20) expr -> . NAME LBRACKET NUMBER RBRACKET
    (21) expr -> . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET
    (22) expr -> . NAME LBRACKET expr RBRACKET
    (23) expr -> . NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET
    (38) expr -> . NAME DOT NAME
    (46) expr -> . INPUT LPAREN RPAREN

    MINUS           shift and go to state 43
    LPAREN          shift and go to state 44
    NUMBER          shift and go to state 48
    NAME            shift and go to state 46
    MEMREF          shift and go to state 49
    INPUT           shift and go to state 45

    expr                           shift and go to state 47

state 20

    (24) stmt -> NAME LBRACKET . NUMBER RBRACKET EQUALS expr
    (25) stmt -> NAME LBRACKET . NUMBER RBRACKET LBRACKET NUMBER RBRACKET EQUALS expr
    (26) stmt -> NAME LBRACKET . expr RBRACKET EQUALS expr
    (27) stmt -> NAME LBRACKET . expr RBRACKET LBRACKET expr RBRACKET EQUALS expr
    (28) stmt -> NAME LBRACKET . expr RBRACKET ASSIGN_OP expr
    (29) stmt -> NAME LBRACKET . expr RBRACKET LBRACKET expr RBRACKET ASSIGN_OP expr
    (30) stmt -> NAME LBRACKET . NUMBER RBRACKET ASSIGN_OP expr
    (31) stmt -> NAME LBRACKET . NUMBER RBRACKET LBRACKET NUMBER RBRACKET ASSIGN_OP expr
    (12) expr -> . expr PLUS expr
    (13) expr -> . expr MINUS expr
    (14) expr -> . expr TIMES expr
    (15) expr -> . MINUS expr
    (16) expr -> . LPAREN expr RPAREN
    (17) expr -> . NUMBER
    (18) expr -> . NAME
    (19) expr -> . MEMREF
    (20) expr -> . NAME LBRACKET NUMBER RBRACKET
    (21) expr -> . NAME LBRACKET NUMBER RBRACKET LBRACKET NUMBER RBRACKET
    (22) expr -> . NAME LBRACKET expr RBRACKET
    (23) expr -> . NAME LBRACKET expr RBRACKET LBRACKET expr RBRACKET
    (38) expr -> . NAME DOT NAME
    (46) expr -> . INPUT LPAREN RPAREN

    NUMBER          shift and go to state 50
    MINUS           shift and go to state 43
    LPAREN          shift and go to state 44
    NAME            shift and go to state 46
    MEMREF          shift and go to state 49
    INPUT           shift and go to state 45

    expr                           shift and go to state 51

state 21

    (36) stmt -> NAME DOT . NAME EQUALS expr
    (37) stmt -> NAME DOT . NAME ASSIGN_OP expr

    NAME            shift and go to state 52


state 22

    (84) stmt -> NAME asm_args .

    NAME            reduce using rule 84 (stmt -> NAME asm_args .)
    MEMREF          reduce using rule 84 (stmt -> NAME asm_args .)
    REGISTER        reduce using rule 84 (stmt -> NAME asm_args .)
    TYPE            reduce using rule 84 (stmt -> NAME asm_args .)
    VAR             reduce using rule 84 (stmt -> NAME asm_args .)
    WHILE           reduce using rule 84 (stmt -> NAME asm_args .)
    PRINT           reduce using rule 84 (stmt -> NAME asm_args .)
    IF              reduce using rule 84 (stmt -> NAME asm_args .)
    PROC            reduce using rule 84 (stmt -> NAME asm_args .)
    CALL            reduce using rule 84 (stmt -> NAME asm_args .)
    $end            reduce using rule 84 (stmt -> NAME asm_args .)
    END             reduce using rule 84 (stmt -> NAME asm_args .)


state 23

    (86) asm_args -> asm_arg . asm_args
    (85) asm_args -> .
    (86) asm_args -> . asm_arg asm_args
    (87) asm_arg -> . REGISTER
    (88) asm_arg -> . NUMBER
    (89) asm_arg -> . MEMREF
    (90) asm_arg -> . NAME
    (91) asm_arg -> . COMMA

  ! shift/reduce conflict for REGISTER resolved as shift
  ! shift/reduce conflict for MEMREF resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
    TYPE            reduce using rule 85 (asm_args -> .)
    VAR             reduce using rule 85 (asm_args -> .)
    WHILE           reduce using rule 85 (asm_args -> .)
    PRINT           reduce using rule 85 (asm_args -> .)
    IF              reduce using rule 85 (asm_args -> .)
    PROC            reduce using rule 85 (asm_args -> .)
    CALL            reduce using rule 85 (asm_args -> .)
    $end            reduce using rule 85 (asm_args -> .)
    END             reduce using rule 85 (asm_args -> .)
    REGISTER        shift and go to state 24
    NUMBER          shift and go to state 18
    MEMREF          shift and go to state 17
    NAME            shift and go to state 15
    COMMA           shift and go to state 25

  ! NAME            [ reduce using rule 85 (asm_args -> .) ]
  ! MEMREF          [ reduce using rule 85 (asm_args -> .) ]
  ! REGISTER        [ reduce using rule 85 (asm_args -> .) ]

    asm_arg                        shift and go to state 23
    asm_args                       shift and go to state 53

state 24

    (87) asm_arg -> REGISTER .

    REGISTER        reduce using rule 87 (asm_arg -> REGISTER .)
    NUMBER          reduce using rule 87 (asm_arg -> REGISTER .)
    MEMREF          reduce using rule 87 (asm_arg -> REGISTER .)
    NAME            reduce using rule 87 (asm_arg -> REGISTER .)
    COMMA           reduce using rule 87 (asm_arg -> REGISTER .)
    TYPE            reduce using rule 87 (asm_arg -> REGISTER .)
    VAR             reduce using rule 87 (asm_arg -> REGISTER .)
    WHILE           reduce using rule 87 (asm_arg -> REGISTER .)
    PRINT           reduce using rule 87 (asm_arg -> REGISTER .)
    IF              reduce using rule 87 (asm_arg -> REGISTER .)
    PROC            reduce using rule 87 (asm_arg -> REGISTER .)
    CALL            reduce using rule 87 (asm_arg -> REGISTER .)
    $end            reduce using rule 87 (asm_arg -> REGISTER .)
    END             reduce using rule 87 (asm_arg -> REGISTER .)


state 25

    (91) asm_arg -> COMMA .
